--- a/package.json
+++ b/package.json
@@ -4,37 +4,28 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "webpack serve",
-    "watch": "webpack --watch",
-    "build": "NODE_ENV=production webpack",
-    "build-dev": "webpack",
-    "clean": "rm -rf dist"
+    "start": "vite",
+    "dev": "vite serve",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Claudioub16/restaurant_page.git"
+    "url": "git+https://github.com/Claudi0-V/weather_app.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Claudioub16/restaurant_page/issues"
+    "url": "https://github.com/Claudi0-V/weather_app/issues"
   },
-  "homepage": "https://github.com/Claudioub16/restaurant_page#readme",
+  "homepage": "https://github.com/Claudi0-V/weather_app#readme",
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.4",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.2.2",
-    "webpack": "^5.52.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.1"
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
+    "tailwindcss": "^3.0.23",
+    "vite": "^2.9.1"
   },
   "dependencies": {
     "regenerator-runtime": "^0.13.9"
